"Fixed html error issues"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header> 
       <h1>Meeting Minutes</h1>
-      <h4>Brainstorming<h4>
+      <h4>Brainstorming</h4>
       <div>2PM | October 6, 2022</div>
     <h2>Links</h2>
     <nav> 
@@ -92,7 +92,7 @@
       </video>
       <h3>Audio</h3>
       <audio controls>
-        <source src="/Recordings/Audio.mp3" type="audio/mp3"></audio>
+        <source src="/Recordings/Audio.mp3" type="audio/mp3">
       </audio>
     </section>
   </main>
@@ -111,18 +111,18 @@
         <input type="text"><br>
         <input type="date">
         <div><b>Prefer</b></div>
-        <input type="checkbox">
-        <scan>candy</scan><br>
-        <input type="checkbox">
-        <scan>pizza</scan><br>
-        <input type="checkbox">
-        <scan>burgers</scan><br>
-        <input type="radio" name="fruits">
-        <scan>Apples</scan>
-        <input type="radio" name="fruits">
-        <scan>Oranges</scan>
-        <input type="radio" name="fruits">
-        <scan>Watermelons</scan>
+        <input type="checkbox" id="candy">
+        <label for="candy">candy</label>
+        <input type="checkbox" id="pizza" >
+        <label for="pizza">pizza</label>
+        <input type="checkbox" id="burgers">
+        <label for="burgers">burgers</label><br>
+        <input type="radio" id="Apples" name="fruits">
+        <label for="Apples">Apples</label>
+        <input type="radio" id="Oranges"name="fruits">
+        <label for="Oranges">Oranges</label>
+        <input type="radio" id="Watermelons" name="fruits">
+        <label for="Watermelons">Watermelons</label>
         <div><b>Favorite Gaming System</b></div>
         <input list="gaming">
         <datalist id="gaming">
