"checking to see if pic not load fix"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header> 
       <h1>Meeting Minutes</h1>
-      <h4>Brainstorming</h4>
+      <h2>Brainstorming</h2>
       <div>2PM | October 6, 2022</div>
     <h2>Links</h2>
     <nav> 
@@ -65,7 +65,7 @@
       <p>
         Secondly, we decided upon an icon design
       </p>
-      <img src="/Photos/clock1.png" alt="clock1" height="150" width="150">
+      <img src="clock.png" alt="clock1" height="150" width="150">
       <hr>
       <details>
         <summary>Some functionalities we decided on are:</summary>
