--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       <h2 id="Recordings">Recordings</h2>
       <h3>Video</h3>
       <video controls width="250">
-        <source src="/Recordings/Video.mp4" type="video/mp4">
+        <source src="Recordings/Video.mp4" type="video/mp4">
       </video>
       <h3>Audio</h3>
       <audio controls>
-        <source src="/Recordings/Audio.mp3" type="audio/mp3">
+        <source src="Recordings/Audio.mp3" type="audio/mp3">
       </audio>
     </section>
   </main>
