"add link to readme and bold fav animal"

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <option value="Xbox"></option>
           <option value="Other"></option>
         </datalist>
-        <div>Favorite Animal</div>
+        <div><b>Favorite Animal</b></div>
         <select>
           <option value="">Select an option</option>
           <option value="Dog">Dog</option>
