"Colored bg, created boxes for paragraph"

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://img.icons8.com/ios-glyphs/344/clock--v3.png">
+  <link rel ="stylesheet" href="mystyle.css">
   <title>Pomodoro Timer First Brainstorm</title>
 </head>
 <body>
   <header> 
-      <h1>Meeting Minutes</h1>
+      <h1 id="title">Meeting Minutes</h1>
       <h2>Brainstorming</h2>
       <div>2PM | October 6, 2022</div>
     <h2>Links</h2>
@@ -25,7 +26,7 @@
 
       <h2>General Information </h2>
       <h3>Meeting Place</h3>
-        <p> 
+        <p class="box address"> 
         <i>1600 Pennsylvania AV NW<br>
         Washington, DC 20500</i><br>
         </p>
@@ -54,7 +55,7 @@
 
     <section>
       <h2 id="DiscussionNotes">Discussion Notes</h2>
-      <p>
+      <p class="box">
         Firstly, our funding will most likely come from private investments
         and grants. The group decided to invest about $1000 into the project.
         <strong>Vivian</strong> noted that she found a few <b>programmers</b> and  <b>UI designers</b> that
@@ -62,7 +63,7 @@
         programmers as <em>she doesn't have enough software experience.</em>
       </p>
       <hr>
-      <p>
+      <p class="box">
         Secondly, we decided upon an icon design
       </p>
       <img src="clock.png" alt="clock1" height="150" width="150">
@@ -78,7 +79,7 @@
         </ul>
       </details>
       <hr>
-      <p>
+      <p class="box">
         For the roles, we decided to have <span>Vivian</span> interview the
         <b>UI designers</b>, <span>Regan and Henry</span> will interview the 
         <b>programmers</b>. <span>Bob and Alex</span> will be in charge of <b>QA testing</b>.
