--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section>
       <h2 id="Recordings">Recordings</h2>
       <h3>Video</h3>
-      <video controls width="250">
+      <video id="meetingRec" controls width="250">
         <source src="Recordings/Video.mp4" type="video/mp4">
       </video>
       <h3>Audio</h3>
