--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p class="box">
         Secondly, we decided upon an icon design
       </p>
-      <img src="clock.png" alt="clock1" height="150" width="150">
+      <img id="clock" src="clock.png" alt="clock1" height="150" width="150">
       <hr>
       <details>
         <summary>Some functionalities we decided on are:</summary>
