Finished sizing, position, and responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header> 
-      <h1 id="title">Meeting Minutes</h1>
+      <h1 id="Title">Meeting Minutes</h1>
       <h2>Brainstorming</h2>
       <div>2PM | October 6, 2022</div>
     <h2>Links</h2>
